Start of overhaul

--- a/neat.kv
+++ b/neat.kv
@@ -448,3 +448,8 @@
 		size_hint_max: manualBeatCanceller.pos[0] + manualBeatCanceller.width - autoBeatCanceller.pos[0], 25
 		pos: autoBeatCanceller.pos[0], manualBeatCanceller.pos[1] - self.height - 3
 		step: 1
+
+# TODO: Antenna selection
+# TODO: IF SHIFT
+# TODO: Auto-lock tuning (ALT)
+# TODO: Memory Groups
