--- a/neat.kv
+++ b/neat.kv
@@ -28,96 +28,181 @@
 #:import meter kenwood.meter
 
 <Neat>:
-	size: 874, 400
+	size: 1074, 515
 
 	Meter:
 		id: smeter
 		min_value: 0
 		max_value: 30
-		size_gauge: 128
+		size_gauge: 256
 		size_text: 20
 		rig_state: 'mainSMeter'
 		file_gauge: 'gardengauge/smeter.png'
-		pos: 7.5, root.size[1] - 256 - 10
+		pos: 10, root.size[1] - 256 - 10
 		low_format: 'S[b]{0:.0f}[/b]'
 		high_format: '+[b]{0:.0f}[/b]'
-		calculation: 'SWR'
+		calculation: 'S-Level'
 
 	Meter:
 		id: SWRmeter
 		min_value: 0
 		max_value: 30
-		size_gauge: 128
+		size_gauge: 256
 		size_text: 20
 		rig_state: 'SWRmeter'
 		peak_hold: 0
 		accel_down_initial: -3
 		file_gauge: 'gardengauge/SWR.png'
-		pos: smeter.pos[0] + 128 + 5, smeter.pos[1]
+		pos: smeter.pos[0] + 256 + 10, smeter.pos[1]
 		click_selects: int(meter.SWR)
-		low_format: ''
-		high_format: ''
-
-	Meter:
-		id: COMPmeter
-		min_value: 0
-		max_value: 30
-		size_gauge: 128
-		size_text: 20
-		rig_state: 'compressionMeter'
-		file_gauge: 'gardengauge/comp.png'
-		pos: smeter.pos[0], smeter.pos[1] + 128
-		low_cutoff: 11
-		low_format: '{0:.0f}'
-		high_format: '[color=#F00]{0:.0f}[/color]'
-		click_selects: int(meter.COMPRESSION)
+		low_format: '\nSWR'
+		high_format: '\nSWR'
 
 	Meter:
 		id: ALCmeter
 		min_value: 0
 		max_value: 30
-		size_gauge: 128
+		size_gauge: 256
 		size_text: 20
 		rig_state: 'ALCmeter'
 		file_gauge: 'gardengauge/ALC.png'
-		pos: SWRmeter.pos[0], COMPmeter.pos[1]
-		low_format: ''
+		pos: SWRmeter.pos[0] + 256 + 10, SWRmeter.pos[1]
+		low_format: '\nALC'
 		high_format: '[color=#F00][b]Over[/b][/color]'
 		click_selects: int(meter.ALC)
 
-	FreqDisplay:
-		id: mainFreq
-		activeColour: 1.0, 1.0, 1.0, 1.0
-		inactiveColour: 0.45, 0.45, 0.45, 1.0
-		zeroColour: 0.2, 0.2, 0.2, 1.0
-		font_size: 70
-		halign: 'right'
-		valign: 'top'
-		text_size: 588, 70
-		size_hint_min: self.text_size
-		size_hint_max: self.text_size
-		pos: root.size[0] - self.text_size[0] - 10, vfoBox.pos[1] - self.size[1] - 10
-		max_lines: 1
-		lines: 1
-		font_name: 'DroidSansMono'
+	Meter:
+		id: COMPmeter
+		min_value: 0
+		max_value: 30
+		size_gauge: 256
+		size_text: 20
+		rig_state: 'compressionMeter'
+		file_gauge: 'gardengauge/comp.png'
+		pos: ALCmeter.pos[0] + 256 + 10, ALCmeter.pos[1]
+		low_cutoff: 11
+		low_format: '{0:.0f}\nCompression'
+		high_format: '[color=#F00]{0:.0f}[/color]\nCompression'
+		click_selects: int(meter.COMPRESSION)
 
-	MemoryDisplay:
-		id: mainMemory
-		color: 1,1,1,1
-		font_size: 20
-		halign: 'left'
-		valign: 'top'
-		text_size: 588, 24
-		size_hint_min: self.text_size
+	BoolToggle:
+		id: antenna1
+		rig_state: 'antenna1'
+		size_hint_max: 50, 25
+		text: 'ANT1'
+		pos: (root.width - (txLamp.pos[0] + txLamp.width - self.pos[0])) / 2, COMPmeter._progress.pos[1] - 30 - self.size[1]
+
+	BoolToggle:
+		id: antenna2
+		rig_state: 'antenna2'
+		size_hint_max: 50, 25
+		text: 'ANT2'
+		pos: antenna1.pos[0], antenna1.pos[1] - self.size[1]
+
+	BoolToggle:
+		id: tunerButton
+		rig_state: 'tuner'
+		pos: antenna1.pos[0] + antenna1.width + 10, antenna1.pos[1]
+		size_hint_max: 50, 25
+		text: 'AT'
+
+	BoolToggle:
+		id: tunerOnInRXbutton
+		rig_state: 'tunerOnInRX'
+		pos: tunerButton.pos[0] + tunerButton.width, tunerButton.pos[1]
+		size_hint_max: 50, 25
+		text: 'ON-RX'
+
+	BoolToggle:
+		rig_state: 'tunerState'
+		id: tuneButton
+		pos: (tunerButton.pos[0] + (tunerOnInRXbutton.pos[0] + tunerOnInRXbutton.width)) / 2 - self.width / 2, tunerButton.pos[1] - self.height
+		size_hint_max: 50, 25
+		text: 'TUNE'
+
+	BoolToggle:
+		id: preAmpButton
+		rig_state: 'mainPreAmp'
+		pos: tunerOnInRXbutton.pos[0] + tunerOnInRXbutton.size[0] + 10, tunerOnInRXbutton.pos[1]
+		size_hint_max: 50, 25
+		text: 'PRE'
+
+	BoolToggle:
+		id: attenuatorButton
+		rig_state: 'attenuator'
+		pos: preAmpButton.pos[0], preAmpButton.pos[1] - self.size[1]
+		size_hint_max: 50, 25
+		text: 'ATT'
+
+	Label:
+		id: rfGainLabel
+		color: 0.8,0.8,0.8,1
+		font_size: 15
+		text_size: 588, 15
 		size_hint_max: self.text_size
-		pos: root.size[0] - self.text_size[0] - 10, mainFreq.pos[1] - 30
-		max_lines: 1
-		lines: 1
-		font_name: 'DroidSansMono'
+		halign: 'left'
+		text: 'RF Gain'
+		# Meter is actually square...
+		pos: preAmpButton.pos[0] + preAmpButton.size[0] + 10, preAmpButton.pos[1] + preAmpButton.height - self.height
+
+	StateSlider:
+		id: rfGain
+		rig_state: 'RFgain'
+		min: 0
+		max: 255
+		value_track: True
+		size_hint_max: 256, 30
+		pos: rfGainLabel.pos[0], rfGainLabel.pos[1] - self.height
+		step: 1
+
+	Label:
+		id: mainSquelchLabel
+		color: 0.8,0.8,0.8,1
+		font_size: 15
+		text_size: 588, 15
+		size_hint_max: self.text_size
+		halign: 'left'
+		text: 'Squelch'
+		pos: rfGain.pos[0] + rfGain.width + 10, rfGainLabel.pos[1] + rfGainLabel.height - self.height
+
+	StateSlider:
+		id: mainSquelch
+		rig_state: 'mainSquelch'
+		min: 0
+		max: 255
+		value_track: True
+		size_hint_max: 256, 30
+		pos: mainSquelchLabel.pos[0], mainSquelchLabel.pos[1] - self.height
+		step: 1
+
+	StateLamp:
+		id: rxLamp
+		rig_state: 'mainBusy'
+		active_color: 0, 1, 0, 1
+		size_hint_max: 50, 50
+		pos: mainSquelch.pos[0] + mainSquelch.width + 10, mainSquelchLabel.pos[1] + mainSquelchLabel.height - self.height
+		text: 'RX'
+
+	StateLamp:
+		id: txLamp
+		rig_state: 'mainTransmitting'
+		active_color: 1, 0, 0, 1
+		size_hint_max: 50, 50
+		update_meter: smeter
+		meter_on: 'gardengauge/cadran.png'
+		meter_off: 'gardengauge/smeter.png'
+		meter_off_low: 'S[b]{0:.0f}[/b]'
+		meter_off_high: '+[b]{0:.0f}[/b]'
+		meter_on_low: '{0:.0f}'
+		meter_on_high: '{0:.0f}'
+		meter_on_calculation: ''
+		meter_off_calculation: 'SWR'
+		pos: rxLamp.pos[0] + rxLamp.width + 10, rxLamp.pos[1]
+		text: 'TX'
 
 	VFOBox:
 		id: vfoBox
-		pos: 266, root.size[1] - self.size[1] - 10
+		pos: (mainFreq.pos[0] - self.width - bandUpButton.width - 10) / 2, (mainFreq.pos[1] * 2 + mainFreq.height - self.height) / 2
 		size_hint_max: 100, 50
 		cols: 2
 		rows: 2
@@ -142,9 +227,60 @@
 			vfoID: int(tuningMode.CALL)
 			state: 'down' if self.parent.vfo == int(tuningMode.CALL) else 'normal'
 
+	Button:
+		id: bandUpButton
+		size_hint_max: 50, 25
+		text: 'UP'
+		on_press: root.control(bandUp = True)
+		pos: vfoBox.pos[0] + vfoBox.width + 10, mainFreq.pos[1] + mainFreq.height - self.height
+
+	Button:
+		id: bandDownButton
+		size_hint_max: 50, 25
+		text: 'DOWN'
+		on_press: root.control(bandDown = True)
+		pos: bandUpButton.pos[0], bandUpButton.pos[1] - self.height
+
+	BoolToggle:
+		rig_state: 'CWautoTune'
+		size_hint_max: 50, 25
+		text: 'CWA'
+		pos: bandDownButton.pos[0], bandDownButton.pos[1] - self.height
+
+	FreqDisplay:
+		id: mainFreq
+		activeColour: 1.0, 1.0, 1.0, 1.0
+		inactiveColour: 0.45, 0.45, 0.45, 1.0
+		zeroColour: 0.2, 0.2, 0.2, 1.0
+		font_size: 70
+		halign: 'right'
+		valign: 'top'
+		text_size: 588, 70
+		size_hint_min: self.text_size
+		size_hint_max: self.text_size
+		pos: (root.width - self.width) / 2, antenna2.pos[1] - self.size[1] - 30
+		max_lines: 1
+		lines: 1
+		font_name: 'DroidSansMono'
+
+	MemoryDisplay:
+		id: mainMemory
+		markup: True
+		color: 1,1,1,1
+		font_size: 20
+		halign: 'left'
+		valign: 'top'
+		text_size: 588, 24
+		size_hint_min: self.text_size
+		size_hint_max: self.text_size
+		pos: mainFreq.pos[0], mainFreq.pos[1] - 30
+		max_lines: 1
+		lines: 1
+		font_name: 'DroidSansMono'
+
 	OPModeBox:
 		id: opModeBox
-		pos: 376, root.size[1] - self.size[1] - 10
+		pos: (root.width + mainFreq.pos[0] + mainFreq.width - self.width) / 2, mainFreq.pos[1] + mainFreq.height - self.height
 		size_hint_max: 200, 50
 		cols: 4
 		rows: 2
@@ -191,166 +327,53 @@
 			state: 'down' if self.parent.mode == int(mode.FSK_REVERSED) else 'normal'
 
 	BoolToggle:
-		rig_state: 'tuner'
-		id: tunerButton
-		pos: 586, root.size[1] - self.size[1] - 10
-		size_hint_max: 50, 25
-		text: 'AT'
+		rig_state: 'autoMode'
+		size_hint_max: opModeBox.width, 25
+		text: 'Auto Mode'
+		pos: opModeBox.pos[0], opModeBox.pos[1] - self.height
 
 	BoolToggle:
-		rig_state: 'tunerState'
-		id: tuneButton
-		pos: 636, root.size[1] - self.size[1] - 10
-		size_hint_max: 50, 25
-		text: 'TUNE'
+		id: noiseBlanker
+		rig_state: 'noiseBlanker'
+		size_hint_max: 75, 25
+		text: 'NB'
+		pos: (root.width - (mainAFgain.pos[0] + mainAFgain.width - self.pos[0])) / 2, mainMemory.pos[1] - self.height - 30
 
-	BoolToggle:
-		rig_state: 'tunerOnInRX'
-		id: tunerOnInRXbutton
-		pos: 611, root.size[1] - self.size[1] * 2 - 10
-		size_hint_max: 50, 25
-		text: 'ON-RX'
-
-	BoolToggle:
-		rig_state: 'mainPreAmp'
-		id: preAmpButton
-		pos: 696, root.size[1] - self.size[1] - 10
-		size_hint_max: 50, 25
-		text: 'PRE'
-
-	BoolToggle:
-		rig_state: 'attenuator'
-		id: attenuatorButton
-		pos: 696, root.size[1] - self.size[1] * 2 - 10
-		size_hint_max: 50, 25
-		text: 'ATT'
-
-	StateLamp:
-		id: rxLamp
-		rig_state: 'mainBusy'
-		active_color: 0, 1, 0, 1
-		size_hint_max: 50, 50
-		pos: attenuatorButton.pos[0] + attenuatorButton.width + 10, root.size[1] - self.size[1] - 10
-		text: 'RX'
-
-	StateLamp:
-		id: txLamp
-		rig_state: 'mainTransmitting'
-		active_color: 1, 0, 0, 1
-		size_hint_max: 50, 50
-		update_meter: smeter
-		meter_on: 'gardengauge/cadran.png'
-		meter_off: 'gardengauge/smeter.png'
-		meter_off_low: 'S[b]{0:.0f}[/b]'
-		meter_off_high: '+[b]{0:.0f}[/b]'
-		meter_on_low: '{0:.0f}'
-		meter_on_high: '{0:.0f}'
-		meter_on_calculation: ''
-		meter_off_calculation: 'SWR'
-		pos: rxLamp.pos[0] + rxLamp.width + 10, root.size[1] - self.size[1] - 10
-		text: 'TX'
+	StateSlider:
+		id: noiseBlankerLevel
+		rig_state: 'noiseBlankerLevel'
+		min: 1
+		max: 10
+		value_track: True
+		size_hint_max: noiseBlanker.size
+		pos: noiseBlanker.pos[0], noiseBlanker.pos[1] - self.height - 3
+		step: 1
 
 	Label:
-		id: rfGainLabel
+		id: AGCconstantLabel
 		color: 0.8,0.8,0.8,1
 		font_size: 15
 		text_size: 588, 15
 		size_hint_max: self.text_size
 		halign: 'left'
-		text: 'RF Gain'
-		# Meter is actually square...
-		pos: 10, smeter.pos[1] - self.height - 10 + 50
+		text: 'AGC Constant'
+		pos: noiseBlanker.pos[0] + noiseBlanker.width + 10, noiseBlanker.pos[1] + noiseBlanker.height - self.height
 
 	StateSlider:
-		id: rfGain
-		rig_state: 'RFgain'
+		id: AGCconstant
+		rig_state: 'AGCconstant'
 		min: 0
-		max: 255
+		max: 20
 		value_track: True
 		size_hint_max: 256, 30
-		pos: 10, rfGainLabel.pos[1] - self.height
+		pos: AGCconstantLabel.pos[0], AGCconstantLabel.pos[1] - self.height
 		step: 1
-
-	Label:
-		id: mainAFgainLabel
-		color: 0.8,0.8,0.8,1
-		font_size: 15
-		text_size: 588, 15
-		size_hint_max: self.text_size
-		halign: 'left'
-		text: 'AF Gain'
-		pos: 10, rfGain.pos[1] - self.height - 5
-
-	StateSlider:
-		rig_state: 'mainAFgain'
-		id: mainAFgain
-		min: 0
-		max: 255
-		value_track: True
-		size_hint_max: 256, 30
-		pos: 10, mainAFgainLabel.pos[1] - self.height
-		step: 1
-
-	Label:
-		id: mainSquelchLabel
-		color: 0.8,0.8,0.8,1
-		font_size: 15
-		text_size: 588, 15
-		size_hint_max: self.text_size
-		halign: 'left'
-		text: 'Squelch'
-		pos: 10, mainAFgain.pos[1] - self.height - 5
-
-	StateSlider:
-		id: mainSquelch
-		rig_state: 'mainSquelch'
-		min: 0
-		max: 255
-		value_track: True
-		size_hint_max: 256, 30
-		pos: 10, mainSquelchLabel.pos[1] - self.height
-		step: 1
-
-	Label:
-		id: outputPowerLabel
-		color: 0.8,0.8,0.8,1
-		font_size: 15
-		text_size: 588, 15
-		size_hint_max: self.text_size
-		halign: 'left'
-		text: 'Power'
-		pos: outputPower.pos[0], outputPower.pos[1] + outputPower.size[1]
-
-	StateSlider:
-		id: outputPower
-		rig_state: 'outputPower'
-		poll_after: True
-		min: 0
-		max: 100
-		value_track: True
-		size_hint_max: 256, 30
-		pos: root.size[0] - self.width - 10, mainAFgain.pos[1]
-		step: 1
-
-	Button:
-		id: bandUpButton
-		size_hint_max: 25, 25
-		text: 'UP'
-		on_press: root.control(bandUp = True)
-		pos: mainMemory.pos[0], mainMemory.pos[1] - self.height - 10
-
-	Button:
-		id: bandDownButton
-		size_hint_max: 25, 25
-		text: 'DN'
-		on_press: root.control(bandDown = True)
-		pos: bandUpButton.pos[0] + bandUpButton.width, bandUpButton.pos[1]
 
 	FilterDisplay:
 		id: filterDisplay
 		size_hint_max: 100, 25
 		pos: 100, 100
-		pos: root.width - self.width - 10, mainMemory.pos[1] - self.height - 10
+		pos: AGCconstant.pos[0] + AGCconstant.width + 10, AGCconstantLabel.pos[1] + AGCconstantLabel.height - self.height
 
 	HighPassLabel:
 		id: highPassLabel
@@ -381,75 +404,12 @@
 		halign: 'center'
 		pos: highPassLabel.pos[0], highPassLabel.pos[1] - self.height - 4
 
-	Label:
-		id: AGCconstantLabel
-		color: 0.8,0.8,0.8,1
-		font_size: 15
-		text_size: 588, 15
-		size_hint_max: self.text_size
-		halign: 'left'
-		text: 'AGC Constant'
-		pos: AGCconstant.pos[0], AGCconstant.pos[1] + AGCconstant.height
-
-	StateSlider:
-		id: AGCconstant
-		rig_state: 'AGCconstant'
-		min: 0
-		max: 20
-		value_track: True
-		size_hint_max: 256, 30
-		pos: root.size[0] / 2 - self.width / 2, mainAFgain.pos[1]
-		step: 1
-
-	BoolToggle:
-		id: noiseBlanker
-		rig_state: 'noiseBlanker'
-		size_hint_max: 75, 25
-		text: 'NB'
-		pos: bandDownButton.pos[0] + bandDownButton.width + 10, bandDownButton.pos[1]
-
-	StateSlider:
-		id: noiseBlankerLevel
-		rig_state: 'noiseBlankerLevel'
-		min: 1
-		max: 10
-		value_track: True
-		size_hint_max: noiseBlanker.size
-		pos: noiseBlanker.pos[0], noiseBlanker.pos[1] - self.height - 3
-		step: 1
-
-	BoolToggle:
-		id: noiseReduction1
-		rig_state: 'noiseReduction1'
-		size_hint_max: 50, 25
-		text: 'NR1'
-		pos: noiseBlanker.pos[0] + noiseBlanker.width + 10, noiseBlanker.pos[1]
-		on_state: noiseReductionLevel.refresh()
-
-	BoolToggle:
-		id: noiseReduction2
-		rig_state: 'noiseReduction2'
-		size_hint_max: 50, 25
-		text: 'NR2'
-		pos: noiseReduction1.pos[0] + noiseReduction1.width, noiseReduction1.pos[1]
-		on_state: noiseReductionLevel.refresh()
-
-	StateSlider:
-		id: noiseReductionLevel
-		rig_state: 'noiseReductionLevel'
-		min: 0
-		max: 9
-		value_track: True
-		size_hint_max: noiseReduction2.pos[0] + noiseReduction2.width - noiseReduction1.pos[0], 25
-		pos: noiseReduction1.pos[0], noiseReduction2.pos[1] - self.height - 3
-		step: 1
-
 	BoolToggle:
 		id: autoNotch
 		rig_state: 'autoNotch'
 		size_hint_max: 75, 25
 		text: 'AN'
-		pos: noiseReduction2.pos[0] + noiseReduction2.width + 10, noiseReduction2.pos[1]
+		pos: filterDisplay.pos[0] + filterDisplay.width + 10, filterDisplay.pos[1] + filterDisplay.height - self.height
 
 	StateSlider:
 		id: autoNotchLevel
@@ -485,7 +445,54 @@
 		pos: autoBeatCanceller.pos[0], manualBeatCanceller.pos[1] - self.height - 3
 		step: 1
 
-# TODO: Antenna selection
-# TODO: IF SHIFT
-# TODO: Auto-lock tuning (ALT)
-# TODO: Memory Groups
+	BoolToggle:
+		id: noiseReduction1
+		rig_state: 'noiseReduction1'
+		size_hint_max: 50, 25
+		text: 'NR1'
+		pos: manualBeatCanceller.pos[0] + manualBeatCanceller.width + 10, manualBeatCanceller.pos[1] + manualBeatCanceller.height - self.height
+		on_state: noiseReductionLevel.refresh()
+
+	BoolToggle:
+		id: noiseReduction2
+		rig_state: 'noiseReduction2'
+		size_hint_max: 50, 25
+		text: 'NR2'
+		pos: noiseReduction1.pos[0] + noiseReduction1.width, noiseReduction1.pos[1]
+		on_state: noiseReductionLevel.refresh()
+
+	StateSlider:
+		id: noiseReductionLevel
+		rig_state: 'noiseReductionLevel'
+		min: 0
+		max: 9
+		value_track: True
+		size_hint_max: noiseReduction2.pos[0] + noiseReduction2.width - noiseReduction1.pos[0], 25
+		pos: noiseReduction1.pos[0], noiseReduction2.pos[1] - self.height - 3
+		step: 1
+
+	Label:
+		id: mainAFgainLabel
+		color: 0.8,0.8,0.8,1
+		font_size: 15
+		text_size: 588, 15
+		size_hint_max: self.text_size
+		halign: 'left'
+		text: 'AF Gain'
+		pos: noiseReduction2.pos[0] + noiseReduction2.width + 10, noiseReduction2.pos[1] + noiseReduction2.height - self.height
+
+	StateSlider:
+		rig_state: 'mainAFgain'
+		id: mainAFgain
+		min: 0
+		max: 255
+		value_track: True
+		size_hint_max: 256, 30
+		pos: mainAFgainLabel.pos[0], mainAFgainLabel.pos[1] - self.height
+		step: 1
+
+
+# TODO: RIT (offset?)
+# TODO: Scan stuff
+# TODO: CTCSS/DCS RX stuff
+# TODO: Store and recall various memory types (Quick, Progammable, CALL, "Regular", Range, etc)
