Fix output meters
There were all going to the SWR meter. :(

--- a/neat.kv
+++ b/neat.kv
@@ -120,7 +120,7 @@
 		min: 0
 		max: 20
 		value_track: True
-		size_hint_max: 256, 30
+		size_hint_max: self.cursor_width + self.max * 4, 30
 		pos: AGCconstantLabel.pos[0], AGCconstantLabel.pos[1] - self.height
 		step: 1
 
