Fix power on/off
This required a massive I/O overhaul, and manually fiddling with RTS/CTS
There's also an ugly hack where I write a NUL when both RTS and CTS are
low.

This does work reliably however, and this adds in better error handling
and retries.

--- a/neat.kv
+++ b/neat.kv
@@ -446,15 +446,15 @@
 
 #####
 
-#	BoolToggle:
-#		id: powerOn
-#		rig_state: 'powerOn'
-#		active_color: 1, 0, 0, 1
-#		size_hint_max: 50, 50
-#		pos: 10, antenna2.pos[1]
-#		halign: 'center'
-#		text: 'POWER\nON'
-#		poll_after: True
+	BoolToggle:
+		id: powerOn
+		rig_state: 'powerOn'
+		active_color: 1, 0, 0, 1
+		size_hint_max: 50, 50
+		pos: 10, antenna2.pos[1]
+		halign: 'center'
+		text: 'POWER\nON'
+		poll_after: True
 
 	BoolToggle:
 		id: antenna1
