Fix S-meter after TX

--- a/neat.kv
+++ b/neat.kv
@@ -515,7 +515,7 @@
 		meter_on_low: '{0:.0f}'
 		meter_on_high: '{0:.0f}'
 		meter_on_calculation: ''
-		meter_off_calculation: 'SWR'
+		meter_off_calculation: 'S-Level'
 		pos: 10, antenna2.pos[1] - 50 - self.height
 		text: 'TX'
 
