Fina power on/off fixes
Power on and off now work 100% of the time, and the controls disable
and enable correctly.

Note that "correctly" for the UP/DOWN buttons means they don't disable
This is because these don't actually have any state.

--- a/neat.kv
+++ b/neat.kv
@@ -453,8 +453,7 @@
 		size_hint_max: 50, 50
 		pos: 10, antenna2.pos[1]
 		halign: 'center'
-		text: 'POWER\nON'
-		poll_after: True
+		text: 'POWER'
 
 	BoolToggle:
 		id: antenna1
