Centre the meters so it looks less dumb in full-screen

--- a/neat.kv
+++ b/neat.kv
@@ -38,7 +38,7 @@
 		size_text: 20
 		rig_state: 'mainSMeter'
 		file_gauge: 'gardengauge/smeter.png'
-		pos: 10, root.size[1] - 256 - 10
+		pos: (root.width - 256 * 4 - 10 * 3) / 2, root.size[1] - 256 - 10
 		low_format: 'S[b]{0:.0f}[/b]'
 		high_format: '+[b]{0:.0f}[/b]'
 		calculation: 'S-Level'
